--- a/jsExplain.html
+++ b/jsExplain.html
@@ -25,8 +25,7 @@
                 <ul>
                     <li><a href="./gitExplain.html">Git</a></li>
                     <li><a href="./regexExplain.html">Regex</a></li>
-                    <li><a href="./svgExplain.html">svg</a></li>
-                    <li><a href="./seoExplain.html">Seo</a></li>
+                    <li><a href="./svgExplain.html">Svg</a></li>
                     <li><a href="./jqueryExplain.html">jQuery</a></li>
                     <li><a href="./dockerExplain.html">Docker</a></li>
                     <li><a href="./cicdExplain.html">CI/CD</a></li>
@@ -55,8 +54,7 @@
             <ul class="menu5_more">
                 <li><a href="./gitExplain.html">Git</a></li>
                 <li><a href="./regexExplain.html">Regex</a></li>
-                <li><a href="./svgExplain.html">svg</a></li>
-                <li><a href="./seoExplain.html">Seo</a></li>
+                <li><a href="./svgExplain.html">Svg</a></li>
                 <li><a href="./jqueryExplain.html">jQuery</a></li>
                 <li><a href="./dockerExplain.html">Docker</a></li>
                 <li><a href="./cicdExplain.html">CI/CD</a></li>
@@ -89,7 +87,7 @@
 
             <div class="code">
                 <h3>JavaScript使用說明</h3>
-                <p>JS的使用方式分為script標籤內以及script src導入的方式將JS檔導入置網頁，早期網站會將src位置放在head標籤內但隨著網頁技術進步，需要的JS檔案容量與日俱增進而影響載入時間因此src位置放在/body標籤前可以優先載入文字與畫面再載入功能，以下將分成多個單元對JS進行簡單介紹。</p>
+                <p>JS的使用方式分為script標籤內以及script src導入的方式將JS檔導入置網頁，早期網站會將src位置放在head標籤內但隨著網頁技術進步，需要的JS檔案容量與日俱增進而影響載入時間因此src位置放在/body標籤前可以優先載入文字與畫面再載入功能，在進行變數或函式命名時建議都以駝峰式命名為主，以下將分成多個單元對JS進行簡單介紹。</p>
                     <h3>console</h3>
                 <ol>
                     <li>
@@ -290,6 +288,9 @@
             <h2>小結</h2>
             <p>JavaScript是賦予網頁靈魂的程式語言，在現今追求互動的網頁下是不可或缺的一門技術，JavaScript不只能應用在網頁上，也能在應用在手機APP開發。</p>
             <p>針對更多JavaScript影片可以參考<a href="https://www.youtube.com/channel/UCEL8871qFEakpqYpwBSjHNA" target="new">Alex 宅幹嘛頻道</a>，有數百部前端影片可以學習。</p>
+            <h3>JS很簡單阿</h3>
+            <video src="./video/alexJs.mp4" controls class="radius"></video>
+            <p>影片出處:<a href="https://www.youtube.com/watch?v=Opw1XH2eGb4" target="new">這裡</a></p>
         </article>
 
 
@@ -298,7 +299,21 @@
     <footer>
         <p>&copy; ayvc0420</p> 
         <div>
-            本站最佳瀏覽解析度為1920x1080
+            本站最佳瀏覽解析度為1920x1080，不支援IE瀏覽器
+        </div>
+        <div class="left">
+            <a href="javascript:;" id="goTop" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="right">
+            <a href="javascript:;" title="只是一個github的圖示" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40 " fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+            </a>
         </div>
     </footer>
 
