--- a/1.html
+++ b/1.html
@@ -7,19 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="./test/style.css">
 
-
-    <style>
-        body{
-            background-color: black;
-        }
-    </style>
 </head>
 <body>
-    <div class="wrap">
-        div
-        <span>
-            span
-        </span>
+    <div class="box">
+        box
     </div>
+    <div class="box2">
+        box2
+    </div>
+    
 </body>
 </html>
