--- a/gitExplain.html
+++ b/gitExplain.html
@@ -26,8 +26,7 @@
                 <ul>
                     <li><a href="./gitExplain.html">Git</a></li>
                     <li><a href="./regexExplain.html">Regex</a></li>
-                    <li><a href="./svgExplain.html">svg</a></li>
-                    <li><a href="./seoExplain.html">Seo</a></li>
+                    <li><a href="./svgExplain.html">Svg</a></li>
                     <li><a href="./jqueryExplain.html">jQuery</a></li>
                     <li><a href="./dockerExplain.html">Docker</a></li>
                     <li><a href="./cicdExplain.html">CI/CD</a></li>
@@ -56,8 +55,7 @@
             <ul class="menu5_more">
                 <li><a href="./gitExplain.html">Git</a></li>
                 <li><a href="./regexExplain.html">Regex</a></li>
-                <li><a href="./svgExplain.html">svg</a></li>
-                <li><a href="./seoExplain.html">Seo</a></li>
+                <li><a href="./svgExplain.html">Svg</a></li>
                 <li><a href="./jqueryExplain.html">jQuery</a></li>
                 <li><a href="./dockerExplain.html">Docker</a></li>
                 <li><a href="./cicdExplain.html">CI/CD</a></li>
@@ -110,9 +108,10 @@
                     <li>需要額外花費時間學習Git的指令</li>
                     <li>雖然入門門檻低但需要精通Git的指令非常困難</li>
                 </ul>
+                <p class="mg_top10">Git分為工作區、暫存區、儲存區，平時開發時會在工作區執行，將檔案進行記錄點儲存時需要先將檔案放入暫存區(git add)，執行儲存時會將整個暫存區的檔案進行紀錄附上自訂訊息(git commit)。</p>
                 <h3>應該要如何使用Git</h3>
                 <p>Windows的環境下須至<a href="https://git-scm.com/" target="new">Git官網</a>安裝Git套件，Linux以及Mac系統已經內建在終端機下可以直接執行。</p>
-                <p>使用Git前必須先建立Git配置，將資料夾用vs code開啟後在終端機介面執行<span class="mark">git init</span>指令即可完成建立Git設定的動作。</p>
+                <p>使用Git前必須先對資料夾建立Git配置，將資料夾用vs code開啟後在終端機執行<span class="mark">git init</span>指令即可讓Git對這個資料夾進行監控。</p>
                 <p>本篇不針對創建使用者資訊作介紹，詳細請參考<a href="https://w3c.hexschool.com/git/8a39ab5" target="new">六角-Git設定個人資訊</a>、<a href="https://medium.com/henrys-jottings/git-2-%E4%BD%BF%E7%94%A8%E8%80%85%E8%A8%AD%E5%AE%9A-%E5%88%9D%E6%9C%9F%E4%BD%BF%E7%94%A8-fcce01702be8" target="new">Git使用者設定教學</a> </p>
                 <p>以下內容使用環境為Windows平台vs code編輯器、Git GUI圖形介面工具Git Graph</p>
                 <h3>Git常見指令</h3>
@@ -140,9 +139,9 @@
                     <li>git commit --amend -m "newMsg"</li>
                     <p>將最後一個commit點的訊息變更為newMsg訊息</p>
                     <li>git reflog</li>
-                    <p>顯示最近git的指令，包含SHA-1碼、分支操作，拯救reset錯誤動作的紀錄</p>
+                    <p>顯示最近git的指令，包含SHA-1碼、分支操作，用於拯救reset錯誤動作</p>
                     <li>git tag v0.1</li>
-                    <p>將當前所在位置設置一個標籤，標籤紀錄為v0.1，如果要針對commit等對象加入標籤需使用HEAD分離狀態切換，建議使用GUI工具</p>
+                    <p>將當前所在位置設置一個標籤，標籤紀錄為v0.1，如果要針對commit等對象加入標籤需使用HEAD分離狀態切換，tag建議使用GUI工具</p>
                     <li>git merge targetName</li>
                     <p>將目前所在分支與targetName分支進行融合，融合後會創立一個新的commit點，如果同一支檔案內容有衝突需手動排除</p>
                     <li>git rebase</li>
@@ -172,16 +171,30 @@
             <h2>小結</h2>
             <p>透過上述介紹應該對Git有基本了解了吧?</p>
             <p>Git不止可以協同多人作業，自行開發專案時也是非常好用的工具，更詳細的Git使用可以參考<br><a href="https://backlog.com/git-tutorial/tw/" target="new">猴子都能懂Git指南</a>、<a href="https://learngitbranching.js.org/?locale=zh_TW" target="new">透過遊戲學習Git</a>、<a href="https://www.youtube.com/watch?v=F-ubntPTT1k" target="new">Alex Git基礎開始</a></p>
-            <p>備註:使用Git下指令時建議先確認目前HEAD位置，可以使用Git Graph工具藍色圓圈就是當前HEAD位置，或使用cat .git/HEAD指令查看當前所在分支位置。</p>
+            <p>備註:使用Git下指令時建議先確認目前HEAD位置，可以使用Git Graph工具藍色圓圈就是當前HEAD所在位置，或使用cat .git/HEAD指令查看當前所在分支位置。</p>
         </article>
 
     </main>
 
     <footer>
-        <p>&copy; ayvc0420</p>
+        <p>&copy; ayvc0420</p> 
         <div>
-            本站最佳瀏覽解析度為1920x1080
-        </div> 
+            本站最佳瀏覽解析度為1920x1080，不支援IE瀏覽器
+        </div>
+        <div class="left">
+            <a href="javascript:;" id="goTop" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="right">
+            <a href="javascript:;" title="只是一個github的圖示" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40 " fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+            </a>
+        </div>
     </footer>
 
 
